Use latest Java